msgxxx functions are renamed to msgXxxx (todo #67)

--- a/TODO
+++ b/TODO
@@ -75,9 +75,6 @@
   62 2019- 8- 3 manage [ansible]srv-bind/srv_bind_update script
                 (and correlative purge)
 
-  67 2021-11-24 rename msgxxx functions to be consistant with standard spelling
-                e.g. msgOut, msgLog, etc.
-
   69
 
 -----------------------------------------------------------------------
@@ -322,6 +319,10 @@
                 that we are currently searching for an initial execution node,
                 and run without having any current execution node.
                 This force the very first command to be ". ttp.sh switch ...".
+
+  67 2021-11-24 rename msgxxx functions to be consistant with standard spelling
+                e.g. msgOut, msgLog, etc.
+     2021-11-29 done
 
   68 2021-11-24 rename log files created by varXxx functions to var_xxx
      2021-11-29 done
