Update README, obsoleting this project

--- a/README
+++ b/README
@@ -1,6 +1,14 @@
  The Tools Project: a Tools System and Paradigm for IT Production
  README
 
+ -----------------------------------------------------------------------
+ PRELIMINARY
+ ===========
+
+  As of 2025-02-01, this project in obsoleted, and will no more be maintained.
+
+  It is replaced by 'TheToolsProject', the same but in Perl. See https://www.github.com/trychlos/TheToolsProject-Perl
+
 -----------------------------------------------------------------------
  Summary
  =======
